@@ -1,8 +1,7 @@
-$NetBSD: distinfo,v 1.12 2005/10/23 16:10:58 wiz Exp $
+$NetBSD: distinfo,v 1.13 2005/12/08 06:32:31 uebayasi Exp $
 
-SHA1 (libpcap-0.9.3.tar.gz) = d4008a6122d12720626c00c16355e4122024ea5f
-RMD160 (libpcap-0.9.3.tar.gz) = 40d9598220e1d0df5c302cc43e836b0d264eab95
-Size (libpcap-0.9.3.tar.gz) = 424508 bytes
-SHA1 (patch-aa) = 0d6b40db77131b564aa1ca7dde9874752169f85c
+SHA1 (libpcap-0.9.4.tar.gz) = 046f7624e66da51eba1ed2cb169695d1e7f31c29
+RMD160 (libpcap-0.9.4.tar.gz) = b8adee8f40256b8822e8e8b7da9a9bbd716ff6ab
+Size (libpcap-0.9.4.tar.gz) = 425887 bytes
 SHA1 (patch-ab) = ef8450b6f7ee050fcc40eec8ebdaa3fbb3ebdfe9
 SHA1 (patch-ac) = 26148fe8cfbd0502fc13b0381ca31c4d02204b00
